Fix mobile vh scroll jump with delayed transition

--- a/src/app/map-tool/data-panel/data-panel.component.scss
+++ b/src/app/map-tool/data-panel/data-panel.component.scss
@@ -10,8 +10,7 @@
 }
 
 .data-wrapper {
-  border-top: 1px solid #eee;
-
+  border-top: 1px solid $white;
 }
 
 // Data panel header text
